v1.0.0/modules/schema/pages/class/IEC62325CIMVersion.adoc
= `IEC62325CIMVersion`
:toclevels: 4


+++IEC 62325 version number assigned to this UML model.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:IEC62325CIMVersion`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* *`IEC62325CIMVersion`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<date,`date`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Form is YYYY-MM-DD for example for January 5, 2009 it is 2009-01-05.+++

| <<version,`version`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Form is IEC62325CIMXXvYY where XX is the major CIM package version and the YY is the minor version. For example IEC62325CIM10v03.+++
|===

'''


//[discrete]
[#date]
=== `date`
+++Form is YYYY-MM-DD for example for January 5, 2009 it is 2009-01-05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IEC62325CIMVersion.date`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#version]
=== `version`
+++Form is IEC62325CIMXXvYY where XX is the major CIM package version and the YY is the minor version. For example IEC62325CIM10v03.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IEC62325CIMVersion.version`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


